# cmake-conan-vscode-setup

./: CMakeLists.txt  readme.md
include/: Fake.hpp
lib/: Fake.cpp
src/: main.cpp
src/include/: Engine.hpp
src/lib/: Engine.cpp
vendors/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
